overal styling of aeropress, chemex, espresso, cafetiere, contact, coffees-single and coffess-blends.html also validated with validator.w3.org

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -14,9 +14,9 @@
 <body>
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,94 +46,249 @@
 
     </header>
 
-    <! --- main section --->
+    <!-- heading  -->
 
     <div class="container main-container">
-
-        <div class="row">
-            <div class="col">
-                <h1>Blends</h1>
+        <div class="container headers-landing">
+            <div class="row no-gutters">
+                <div class="col">
+                    <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image">
+                    <p class="ph-landing uppercase">blends</p>
+                </div>
             </div>
         </div>
 
+        <hr class="section-divider">
 
-        <div class="row">
+        <!-- main media objects -->
+
+
+        <div class="row no-gutters">
             <div class="col-12">
-
-                <div class="media border p-5">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Project Co. Blend</h4>
-                        <p>Our signature blend. A great, full body with slightly heavier texture and deep, dark brown colour. You’ll recognize it by its full, sweet aroma. </p>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Project Co. Blend</h4>
+                        <p>Our signature blend. A great, full body with slightly heavier texture and deep, dark brown colour. You’ll recognize it by its full, sweet aroma.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
                     </div>
                 </div>
-
-                <div class="media border p-5">
-                    <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Red Rock</h4>
-                        <p>This is our 3 bean North Italian blend. Containing the only speciality graded Robusta in the world, this blend gives very full body and sweet flavour, without the cheap iconic Robusta flavour anticipated by the coffee varietal.</p>
-                    </div>
-                </div>
-
             </div>
-
+        </div>
+        <div class="row no-gutters">
             <div class="col-12">
-
-                <div class="media border p-5">
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Red Rock</h4>
+                        <p>This is our 3 bean North Italian blend. Containing the only speciality graded Robusta in the world, this blend gives very full body and sweet flavour, without the cheap iconic Robusta flavour anticipated by the coffee varietal.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star "></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-12">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/indonesia-icon.png" alt="indonesia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Moka Java Blend</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Moka Java Blend</h4>
                         <p>This Indonesian blend was created to offer our organic interpretation of one of the first blended coffees. Sweet tropical fruit mingles in the cup with hints of spice and floral tones. Crisp, balanced acidity gives this coffee
                             a clean, but balanced cup.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="col-12">
-
-                <div class="media border p-5">
-                    <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>French Roast</h4>
-                        <p>A traditional French Roast blend roasted slightly lighter, resulting in a coffee with a rich, smoky taste and a semi-sweet finish. </p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-12">
-
-                <div class="media border p-5">
-                    <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Breakfast Blend</h4>
-                        <p>This remarkable blend offers the best of all worlds. With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-12">
-
             </div>
         </div>
+        <div class="row no-gutters">
+            <div class="col-12">
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">French Roast</h4>
+                        <p>A traditional French Roast blend roasted slightly lighter, resulting in a coffee with a rich, smoky taste and a semi-sweet finish. </p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-12">
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Breakfast Blend</h4>
+                        <p>This remarkable blend offers the best of all worlds. With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
-
-
-
-        <! --- footer --->
-
-        <footer>
-
-        </footer>
-
-
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 
 </html>
