--- a/coffees-single.html
+++ b/coffees-single.html
@@ -14,9 +14,9 @@
 <body>
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,45 +43,48 @@
             </div>
         </nav>
 
-
     </header>
 
-    <! --- main section --->
+    <!-- heading -->
 
     <div class="container main-container">
-
-        <div class="row">
-            <div class="col">
-                <h1>Single Origin</h1>
+        <div class="container headers-landing">
+            <div class="row no-gutters">
+                <div class="col">
+                    <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image">
+                    <p class="ph-landing uppercase">single origin</p>
+                </div>
             </div>
         </div>
 
+        <hr class="section-divider">
 
-        <div class="row">
+        <!-- main media objects -->
+
+        <div class="row no-gutters">
             <div class="col-12">
-
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Colombia</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Colombia</h4>
                         <p>Smooth, yet utterly complex, dark, robust and rich. Colombian coffee is justly renowned for its incredible coffee flavour, truly one of the finest!</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Acidity</p>
+                                <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Aroma</p>
+                                <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Body</p>
+                                <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -92,31 +95,30 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-12">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Ethiopia</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Ethiopia</h4>
                         <p>This African coffee has a smooth soft mouth feel, with fruity berry and some nuttiness with a hint of sweet ripe cherry.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Acidity</p>
+                                <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Aroma</p>
+                                <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Body</p>
+                                <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -127,69 +129,64 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-12">
-
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/papanewguinea-icon.png" alt="papa new guinea icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Papa New Guinea</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Papa New Guinea</h4>
                         <p>Citric with chocolate tones best describes this Indonesian coffee that leave's a wonderful lingering herbal aftertaste.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Acidity</p>
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Aroma</p>
+                                <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Body</p>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-12">
-
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Puerto Rico</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Puerto Rico</h4>
                         <p>Café Hacienda San Pedro possesses a taste so rich and seductive, so velvety and smooth that it surprises the palate. Its classic aroma is semi-sweet and caramel-like with a delicate chocolaty aftertaste and spicy overtones.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Acidity</p>
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Aroma</p>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Body</p>
+                                <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -200,54 +197,89 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-12">
-
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Tanzania</h4>
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Tanzania</h4>
                         <p>This African coffee is rich with a creamy body and a hint of tropical fruit, raisin and complex acidity. </p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Acidity</p>
+                                <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Aroma</p>
+                                <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                             <li class="list-inline-item inline-stars">
-                                <p class="coffee-review">Body</p>
+                                <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                         </ul>
                     </div>
                 </div>
             </div>
-
         </div>
-    </div>
-    </div>
     </div>
 
     <!-- footer -->
-
-  
-
-
-
-
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
