--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header>
 
-    <! --- navbar --->
+    <!-- navbar -->
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffee proyect co. logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,32 +46,32 @@
 
   </header>
 
-  <! --- bg color change --->
+  <!-- bg color change -->
 
   <div class="container bgblack">
 
-    <! --- jumbotron hero image --->
+    <!-- jumbotron hero image -->
 
-    <div class="container">
+    <div class="container landing-container">
       <div class="row no-gutters">
         <div class="col-12">
-          <div class="jumbotron jumbotron-container main-container">
+          <div class="jumbotron main-container">
             <h1 class="display-4">Welcome</h1>
             <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
             <hr class="section-divider">
-            <p>We now supplement barista courses with SCA Coffee Skills modules<span>&nbsp</span><a href="intro.html" class="badge badge-light">New</a></p>
+            <p>SCA accredited training courses to suit all skill levels!<a href="intro.html" class="badge badge-light">New</a></p>
           </div>
         </div>
       </div>
     </div>
 
-    <! --- about us --->
+    <!-- about us -->
 
     <div class="container">
       <div class="row no-gutters">
         <div class="col-12">
           <div class="quote-landing my-border">
-            <p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i>Life is short, enjoy your coffee<i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
+            <p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short, enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <! --- beans --->
+  <!-- beans -->
 
   <div class="container headers-landing our-coffees-landing">
     <div class="row no-gutters">
@@ -100,7 +100,7 @@
     </div>
   </div>
 
-  <! --- cards for beans section --->
+  <!-- cards for beans section -->
 
   <div class="container cards-beans px-0">
     <div class="card-deck my-4">
@@ -110,7 +110,7 @@
 
           <div class="card mx-1">
             <div class="card-header my-border">
-              <h2>Single Origin</h2>
+              <h2 class="text-center uppercase">Single Origin</h2>
             </div>
             <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image" width=256 height=146>
             <div class="card-body my-border">
@@ -126,7 +126,7 @@
 
           <div class="card mx-1">
             <div class="card-header my-border">
-              <h2>Blends</h2>
+              <h2 class="text-center uppercase">Blends</h2>
             </div>
             <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image" width=256 height=146>
             <div class="card-body my-border">
@@ -140,13 +140,13 @@
   </div>
 
 
-  <! --- sca courses --->
+  <!-- sca courses -->
 
 
   <div class="container headers-landing">
     <div class="row no-gutters">
-      <div class="col">
-        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
+      <div class="col-12">
+        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image">
         <p class="ph-landing uppercase">our courses</p>
       </div>
     </div>
@@ -160,33 +160,33 @@
         <div class="container">
           <div class="row no-gutters">
             <div class="col-12 d-inline-flex justify-content-center">
-              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=300 height=300></img>
+              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=300 height=300>
             </div>
           </div>
         </div>
       </div>
 
       <div class="sca-text col-12">
-        <h2>SCA Courses</h2>
-        <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere. SCA is a controlled and certified education system with a curriculum written and updated by the
-          best coffee experts in the coffee industry.</p>
-        <p>SCA Barista Courses and Coffee Skills Program allows the coffee professionals to complete coffee/barista courses in six subject modules and three levels of certifications, amassing course credits each time a certification is successfully passed
-          that count towards the 100 points needed to gain SCA internationally recognized Coffee Diploma.</p>
-        <p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points. SCA Certification is based on both technical knowledge and practical examination.</p>
+        <h2 class="text-center uppercase">SCA Courses</h2>
+        <hr class="section-divider">
+        <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere</p>
+        <p>SCA is a controlled and certified education system with a curriculum written and updated by the best coffee experts in the coffee industry.</p>
+        <p>The program allows you to complete courses in six subject modules and three levels of certifications, amassing course credits that count towards the 100 points needed to gain SCA internationally recognized Coffee Diploma.</p>
+        <p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points.</p>
         <a href="intro.html" class="btn btn-info my-button my-border">Start here</a>
       </div>
     </div>
-  </div>
-  <br>
+    </div>
+  
 
 
 
-  <! --- brew guides --->
+  <!-- brew guides -->
 
   <div class="container headers-landing">
     <div class="row no-gutters">
-      <div class="col">
-        <img src="./assets/images/brew-guides.png" alt="brewing vesels image" width=100% height=auto>
+      <div class="col-12">
+        <img src="./assets/images/brew-guides.png" alt="brewing vesels image">
         <p class="ph-landing">Brewing Guides</p>
       </div>
     </div>
@@ -194,7 +194,7 @@
   <br>
   <br>
 
-  <! --- link to page/downloadable pdfs --->
+ <! --- brew cards/links to downloadable pdfs --->
 
   <div class="container">
     <div class="card-columns d-inline-flex justify-content-center">
@@ -204,7 +204,7 @@
           <div class="card">
             <div class="card-body text-center brew-cards">
               <a href="aeropress.html"><i class="fas fa-chevron-right">Aeropress</i></a>
-              <img src="./assets/images/aeropress.png" alt="aeropress icon" class="card-img">
+              <img src="./assets/images/brewing-1.jpg" alt="aeropress icon" class="card-img">
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
           <div class="card">
             <div class="card-body text-center brew-cards">
               <a href="cafetiere.html"><i class="fas fa-chevron-right">Cafetiere</a></i>
-              <img src="./assets/images/french-press.png" alt="cafetiere icon" class="card-img"></a>
+              <img src="./assets/images/brewing-2.jpg" alt="cafetiere icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
           <div class="card">
             <div class="card-body text-center brew-cards">
               <a href="chemex.html"><i class="fas fa-chevron-right">Chemex</a></i>
-              <img src="./assets/images/chemex.png" alt="chemex icon" class="card-img"></a>
+              <img src="./assets/images/brewing-3.jpg" alt="chemex icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
           <div class="card">
             <div class="card-body text-center brew-cards">
               <a href="espresso.html"><i class="fas fa-chevron-right">Espresso</a></i>
-              <img src="./assets/images/espresso-machine.png" alt="espresso machine icon" class="card-img"></a>
+              <img src="./assets/images/brewing-4.jpg" alt="espresso machine icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -240,7 +240,7 @@
     </div>
   </div>
 
-  <! --- testimonials carousel  --->
+  <hr class="section-divider" <!-- testimonials carousel -->
 
   <div class="container carousel-container">
     <div class="row no-gutters">
@@ -248,7 +248,7 @@
 
         <div id="testimonialscarousel" class="carousel slide" data-ride="carousel">
 
-          <! --- indicators  --->
+          <!-- indicators -->
 
           <ul class="carousel-indicators">
             <li data-target="#testimonialscarousel" data-slide-to="0" class="active"></li>
@@ -256,7 +256,7 @@
             <li data-target="#testimonialscarousel" data-slide-to="2"></li>
           </ul>
 
-          <! --- slides  --->
+          <!-- slides -->
 
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -265,29 +265,29 @@
                 <div class="carousel-caption">
                   <p style="background-color: rgba(74,74,79,0.75);">"The feedback from our customers has been very positive." - Oxmantown</p>
                 </div>
-                </div>
               </div>
-              <div class="carousel-item">
-                <div class="img-centering d-flex justify-content-center">
+            </div>
+            <div class="carousel-item">
+              <div class="img-centering d-flex justify-content-center">
                 <img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
                 <div class="carousel-caption">
                   <p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. have been there for us every step of the way." - BIBI's</p>
                 </div>
-                </div>
               </div>
-              <div class="carousel-item">
-                <div class="img-centering d-flex justify-content-center">
+            </div>
+            <div class="carousel-item">
+              <div class="img-centering d-flex justify-content-center">
                 <img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
                 <div class="carousel-caption">
                   <p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. coffee is, no doubt, exceptional quality coffee." - Forest Ave.</p>
                 </div>
               </div>
             </div>
-        </div>
+          </div>
 
-          <! --- controls  --->
-          
-          
+          <!-- controls -->
+
+
           <a class="carousel-control-prev" href="#testimonialscarousel" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
@@ -301,91 +301,134 @@
   </div>
   <hr class="section-divider">
 
-  <! --- quotes --->
+  <!-- quotes -->
 
-
-
-
-  <! --- form --->
-
-  <div class="container">
-    <div class="row no-gutters">
-      <div class="col-6 offset-3">
-        <h3 class="text-center form-heading">Espresso yourself</h3>
-        <form>
-          <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-          <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-          <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-          <div class="form-row text-center">
-            <div class="col">
-              <button type="submit" class="btn my-button my-border">Send message</button>
-            </div>
-        </form>
+  <div class="container-wrapper">
+    <div class="container quotes-container content-container">
+      <section class="quotes">
+        <div class="row">
+          <div class="col-12 page-header">
+            <h2 class="text-center uppercase">What our students are saying...</h2>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="media">
+              <div class="d-none d-sm-block">
+                <img src="./assets/images/man1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+              </div>
+              <div class="media-body">
+                <blockquote class="blockquote">
+                  <p> I got a job from doing this course within a week. Really recommended!</p>
+                  <p> (Luis Angel) </p>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="media">
+              <div class="d-none d-sm-block">
+                <img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2" height=100 width=100>
+              </div>
+              <div class="media-body">
+                <blockquote class="blockquote">
+                  <p> The perfect course! Loved every minute of it.</p>
+                  <p> (Molly Brady)</p>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="media">
+              <div class="d-none d-sm-block">
+                <img src="./assets/images/man2.jpg" class="my-border mr-3 p-2" height=100 width=100>
+              </div>
+              <div class="media-body">
+                <blockquote class="blockquote">
+                  <p> I got a job within a week. I invested in myself and it paid off!</p>
+                  <p> (Dan Smullen)</p>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
-  <! --- footer --->
 
-  <footer>
-    <div class="footer">
+      <!-- form -->
 
       <div class="container">
-        <div class="row">
+        <div class="row no-gutters">
+          <div class="col-10 offset-1">
+            <h3 class="text-center form-heading uppercase">Espresso yourself</h3>
+            <form>
+              <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+              <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+              <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+              <div class="text-center">
+                <div class="col">
+                  <button type="submit" class="btn my-button my-border">Send message</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
 
-          <div class="col-6 media d-inline-flex justify-content-center">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/" target="_blank">
+      <!-- footer -->
+
+      <footer>
+        <div class="footer">
+
+          <div class="container">
+            <div class="row">
+
+              <div class="col-6 media d-inline-flex justify-content-center">
+                <ul class="list-inline">
+                  <li class="list-inline-item footer-inline">
+                    <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://twitter.com/" target="_blank">
+                  </li>
+                  <li class="list-inline-item footer-inline">
+                    <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com" target="_blank">
+                  </li>
+                  <li class="list-inline-item footer-inline">
+                    <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.pinterest.com/" target="_blank">
+                  </li>
+                  <li class="list-inline-item footer-inline">
+                    <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.instagram.com/" target="_blank">
+                  </li>
+                  <li class="list-inline-item footer-inline">
+                    <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
-              </li>
+                  </li>
 
-            </ul>
+                </ul>
+              </div>
+              <div class="col-6 my-info d-inline-flex justify-content-center">
+                <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                <span class="sr-only">Github</span><span>&nbsp;</span><p>2019| ©roxheff</p> 
+              </div>
+            </div>
           </div>
-          <div class="col-6 my-info d-inline-flex justify-content-center">
-            <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
-          </div>
-        </div>
-      </div>
+      </footer>
 
-    </div>
-    </div>
-
-
-    </div>
-  </footer>
-
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
