--- a/brewing.html
+++ b/brewing.html
@@ -141,58 +141,52 @@
 
   <! --- footer --->
 
-  <footer>
-    <div class="footer">
-
-      <div class="container">
-        <div class="row">
-
-          <div class="col-6 media d-inline-flex justify-content-center">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="#" target="_blank">
+<footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" target="_blank">
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" target="_blank">
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" target="_blank">
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" target="_blank">
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
-              </li>
-
-            </ul>
-          </div>
-          <div class="col-6 my-info d-inline-flex justify-content-center">
-            <p>Designed by roxheff <a href="https://github.com/roxanahefferon"><i class="fab fa-github-square"></i></p></a>
-          </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-
-    </div>
-    </div>
-
-
-    </div>
-  </footer>
+    </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
