--- a/cafetiere.html
+++ b/cafetiere.html
@@ -15,9 +15,9 @@
 
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproyect-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,7 +46,7 @@
 
     </header>
 
-    <! --- main section --->
+    <!-- main section -->
 
     <div class="container">
         <div class="brewing-container main-container">
@@ -83,48 +83,48 @@
     </div>
     <hr class="section-divider">
 
-    <! --- sub-section --->
+    <!-- sub-section -->
 
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="brewing-download">Want to download it as pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Want to download it as pdf? Click <i class="fas fa-arrow-right"></i><a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
 
-    <! --- footer --->
+    <!-- footer -->
 
     <footer>
         <div class="footer">
             <div class="container">
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-6 media d-inline-flex justify-content-center">
                         <ul class="list-inline">
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
@@ -133,12 +133,12 @@
                         </ul>
                     </div>
                     <div class="col-6 my-info d-inline-flex justify-content-center">
-                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
         </div>
     </footer>
 
