--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproyect-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,35 +44,120 @@
             </div>
         </nav>
 
-
     </header>
 
-<div class="container main-container">
-<div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/contact-us.jpg" alt="woman holding mobile phone image" width=100% height=auto>
-          <p class="ph-landing">Contact</p>
+    <!-- heading -->
+
+    <div class="container main-container">
+        <div class="container headers-landing">
+            <div class="row no-gutters">
+                <div class="col-12">
+                    <img src="./assets/images/contact-us.jpg" alt="woman holding mobile phone image">
+                    <p class="ph-landing">Contact</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+    <hr class="section-divider">
+
+    <!-- heading text -->
+
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-10 offset-1">
+                <p>If you are in the coffee business and would like to know more about our products and services, please get in touch</p>
+            </div>
+        </div>
     </div>
-  <br>
 
+    <!-- form -->
 
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-10 offset-1">
+                <h2 class="text-center form-heading uppercase">Espresso yourself</h2>
+                <form>
+                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+                    <div class="text-center">
+                        <div class="col">
+                            <button type="submit" class="btn my-button my-border">Send message</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
+    <!-- contact us -->
 
+    <div class="container contact-us">
+        <div class="row no-gutters">
+            <div class="col-6 offset-3">
+                <i class="fas fa-envelope fa-2x"></i>
+                <p>hello@coffeeprojectco.ie</p>
+                <i class="fas fa-phone-square-alt fa-2x"></i>
+                <p>+35313657616</p>
+                <i class="fas fa-clock fa-2x"></i>
+                <p>9-16.30 Monday | Friday </p>
+                <p>Roastery opening hours:</p>
+                <p>7.30-17 Monday | Friday * 10-16 Saturday</p>
+                <p><em>Office closed weekends and bank holidays</em></p>
+                <i class="fas fa-address-card fa-2x"></i>
+                <p>137 Peaberry St. | Dublin 1 | Ireland | A12 BC34</p>
+            </div>
+        </div>
+    </div>
 
-
-
-
-    <! --- footer --->
+    <!-- footer -->
 
     <footer>
-
+        <div class="footer">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
-
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
